--- a/index.html
+++ b/index.html
@@ -291,10 +291,10 @@
 
 
                 $("#lastviewonvideo").html(data.videos[0].views);
-               // console.log(data.stream.viewers);
+                // console.log(data.stream.viewers);
 
 
-        }
+            }
         });
     </script>
 
@@ -438,18 +438,23 @@
                 <div class="row">
                     <div class="col-md-4 wow animated fadeInLeft">
                         <div class="recent-works">
-                            <h3>Recent Works</h3>
-
-                        </div>
-                    </div>
-                    <div class="col-md-7 col-md-offset-1 wow animated fadeInRight">
-                        <div class="welcome-block">
-                            <h3>Welcome To Beboish Site</h3>
-                            <div class="message-body">
-                                <img src="img/member-1.jpg" class="pull-left" alt="member">
-                                <p>Hellaw!<br> I'm Bebo,Lebanese and 26 years old. ♥(ꈍᴗꈍ)♥.I am variety streamer and feel free ro suggest games.<br> Business E-Mail: BeboishTV@gmail.com
-                                    (Business inquires ONLY)</p>
+                            <h3>Beboish TIme</h3>
+                            <p>▼ Tuesday: 4-ish PM EST</p> <br>
+                            <p>▼ Wednesday: 4-ish PM EST</p> <br>
+                            <p>▼ Thursday: OFF</p> <br>
+                            <p>▼ Friday: 4-ish PM EST</p> <br>
+                            <p>▼ Saturday: 4-ish PM EST</p> <br>
+                            <p>▼ Sunday: OFF -> Sub Movie Night (3 PM EST)</p> <br>
                             </div>
+                            </div>
+                            <div class="col-md-7 col-md-offset-1 wow animated fadeInRight">
+                                <div class="welcome-block">
+                                    <h3>Welcome To Beboish Site</h3>
+                                    <div class="message-body">
+                                        <img src="img/member-1.jpg" class="pull-left" alt="member">
+                                        <p>Hellaw!<br> I'm Bebo,Lebanese and 26 years old. ♥(ꈍᴗꈍ)♥.I am variety streamer and feel free ro suggest games.<br> Business E-Mail: BeboishTV@gmail.com
+                                            (Business inquires ONLY)</p>
+                                    </div>
 
                         </div>
                     </div>
